--- a/C195/view/Customer.fxml
+++ b/C195/view/Customer.fxml
@@ -68,7 +68,7 @@
                                     <Insets left="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <TextField fx:id="addressField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="285.0" />
+                              <TextField fx:id="address1Field" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="285.0" />
                            </children>
                            <VBox.margin>
                               <Insets left="10.0" top="5.0" />
