Beware the Snorlax

--- a/C195/view/Customer.fxml
+++ b/C195/view/Customer.fxml
@@ -33,7 +33,7 @@
             </TableView>
             <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="760.0">
                <children>
-                  <VBox fx:id="customerBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="420.0" style="-fx-border-style: solid; -fx-border-width: 2px; -fx-border-radius: 5px; -fx-border-color: gainsboro;">
+                  <VBox fx:id="customerBox" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="420.0" style="-fx-border-style: solid; -fx-border-width: 2px; -fx-border-radius: 5px; -fx-border-color: gainsboro;">
                      <children>
                         <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="390.0">
                            <children>
@@ -151,11 +151,19 @@
                               <Insets left="15.0" top="10.0" />
                            </VBox.margin>
                         </Button>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteCustomerButtonPressed" prefHeight="30.0" prefWidth="285.0" text="Delete Customer">
+                        <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="285.0">
                            <VBox.margin>
                               <Insets left="15.0" top="10.0" />
                            </VBox.margin>
-                        </Button>
+                           <children>
+                              <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#editCustomerButtonPressed" prefHeight="30.0" prefWidth="135.0" text="Edit Customer" />
+                              <Button layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteCustomerButtonPressed" prefHeight="30.0" prefWidth="135.0" text="Delete Customer">
+                                 <HBox.margin>
+                                    <Insets left="15.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
                         <Button layoutX="50.0" layoutY="129.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getAppointmentsCalendar" prefHeight="30.0" prefWidth="285.0" text="Display Appointments Calendar">
                            <VBox.margin>
                               <Insets left="15.0" top="40.0" />
