--- a/C195/view/Customer.fxml
+++ b/C195/view/Customer.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -33,7 +34,7 @@
             </TableView>
             <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="760.0">
                <children>
-                  <VBox fx:id="customerBox" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="420.0" style="-fx-border-style: solid; -fx-border-width: 2px; -fx-border-radius: 5px; -fx-border-color: gainsboro;">
+                  <VBox fx:id="customerBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="420.0" style="-fx-border-style: solid; -fx-border-width: 2px; -fx-border-radius: 5px; -fx-border-color: gainsboro;">
                      <children>
                         <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="390.0">
                            <children>
@@ -94,7 +95,7 @@
                                     <Insets left="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <TextField fx:id="cityField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="170.0" />
+                              <TextField fx:id="cityNameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="170.0" />
                               <Label layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="25.0" text="Zip" textFill="WHITE">
                                  <HBox.margin>
                                     <Insets />
@@ -120,7 +121,7 @@
                                     <Insets left="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <TextField fx:id="countryField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="285.0" />
+                              <TextField fx:id="countryField" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="285.0" />
                            </children>
                            <VBox.margin>
                               <Insets left="10.0" top="5.0" />
@@ -146,25 +147,51 @@
                               <Insets />
                            </VBox.margin>
                         </ImageView>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#newCustomerButtonPressed" prefHeight="30.0" prefWidth="285.0" text="New Customer">
-                           <VBox.margin>
-                              <Insets left="15.0" top="10.0" />
-                           </VBox.margin>
-                        </Button>
-                        <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="285.0">
-                           <VBox.margin>
-                              <Insets left="15.0" top="10.0" />
-                           </VBox.margin>
+                        <HBox layoutX="27.0" layoutY="102.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="285.0">
                            <children>
-                              <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#editCustomerButtonPressed" prefHeight="30.0" prefWidth="135.0" text="Edit Customer" />
-                              <Button layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteCustomerButtonPressed" prefHeight="30.0" prefWidth="135.0" text="Delete Customer">
+                              <RadioButton fx:id="newRadio" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="20.0" selected="true" textFill="WHITE">
+                                 <HBox.margin>
+                                    <Insets left="33.5" />
+                                 </HBox.margin>
+                              </RadioButton>
+                              <RadioButton fx:id="editRadio" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="20.0" textFill="WHITE">
+                                 <HBox.margin>
+                                    <Insets left="79.0" />
+                                 </HBox.margin>
+                              </RadioButton>
+                              <RadioButton fx:id="deleteRadio" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="20.0" textFill="WHITE">
+                                 <HBox.margin>
+                                    <Insets left="79.0" />
+                                 </HBox.margin>
+                              </RadioButton>
+                           </children>
+                           <VBox.margin>
+                              <Insets left="15.0" top="10.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox layoutX="27.0" layoutY="142.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="285.0">
+                           <children>
+                              <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="85.0" text="New" textFill="WHITE">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Label>
+                              <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="85.0" text="Edit" textFill="WHITE">
                                  <HBox.margin>
                                     <Insets left="15.0" />
                                  </HBox.margin>
-                              </Button>
+                              </Label>
+                              <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="85.0" text="Delete" textFill="WHITE">
+                                 <HBox.margin>
+                                    <Insets left="15.0" />
+                                 </HBox.margin>
+                              </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets left="15.0" top="10.0" />
+                           </VBox.margin>
                         </HBox>
-                        <Button layoutX="50.0" layoutY="129.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getAppointmentsCalendar" prefHeight="30.0" prefWidth="285.0" text="Display Appointments Calendar">
+                        <Button layoutX="50.0" layoutY="129.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getAppointmentsCalendar" prefHeight="40.0" prefWidth="285.0" text="Display Appointments Calendar">
                            <VBox.margin>
                               <Insets left="15.0" top="40.0" />
                            </VBox.margin>
